<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginScreens.createAccountActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:fontFamily="@font/gilroybold"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_to_look_for_amazing_nsuites_around_the_world"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/gilroylight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/edtname"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/edtname"
      />

    <EditText
        android:id="@+id/edtaddress"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/edtemail"
        />

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/edtaddress"
         />

    <Button
        android:id="@+id/btncreateaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/lets_get_started"
        android:onClick="registerAccount"
        android:fontFamily="@font/gilroylight"
        android:backgroundTint="@color/redmain"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtpassword" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_clicking_this_you_agree_to_our_n_terms_and_conditions_and_privacy_policy"
        android:fontFamily="@font/gilroylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncreateaccount" />

</androidx.constraintlayout.widget.ConstraintLayout>