<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginScreens.loginsMainActivity">

<!--    <TextView-->
<!--        android:id="@+id/textView3"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:fontFamily="@font/gilroybold"-->
<!--        android:text="@string/suite_rentals"-->
<!--        android:textColor="@color/purpledarkmain"-->
<!--        android:textSize="25sp"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:letterSpacing="0.4"-->
<!--        android:paddingStart="15dp"-->
<!--        android:paddingEnd="15dp"-->
<!--        android:singleLine="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/suitrentalsroyal" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gilroybold"
        android:letterSpacing="0.1"
        android:layout_marginTop="30dp"
        android:text="@string/travel_more_n_book_better"
        android:textColor="@color/purpledarkmain"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />


    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:background="@drawable/custom_edittext"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/custom_edittext"
        android:textSize="14sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editemail"
        android:autofillHints="no" />

    <!--    <TextView-->
<!--        android:id="@+id/textView5"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/find_a_suite_you_will_love_today"-->
<!--        android:layout_marginTop="10dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView4" />-->

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/redmain"
        android:textColor="@color/white"
        android:onClick="loginAccount"
        android:fontFamily="@font/gilroylight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editpassword" />

    <Button
        android:id="@+id/btncreateaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:onClick="createAnAccount"
        android:fontFamily="@font/gilroylight"
        android:backgroundTint="@color/redmain"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_clicking_this_you_agree_to_our_n_terms_and_conditions_and_privacy_policy"
        android:fontFamily="@font/gilroylight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btncreateaccount" />



</androidx.constraintlayout.widget.ConstraintLayout>